--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-router-dom": "^5.3.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
