--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "framer-motion": "^4.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-debounce-input": "^3.2.5",
